feat setup route

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT=3000
 HOST=0.0.0.0
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=procon_2022
+JWT_SECRET_KEY=
 QUESTION_SERVICE_API=http://localhost:5555
