--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ HOST=0.0.0.0
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
-DB_NAME=procon_2022
+DB_NAME=procon2022
 JWT_SECRET_KEY=
 QUESTION_SERVICE_API=http://localhost:5555
