--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "got": "^11.8.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "^2.6.7",
     "sequelize": "^6.21.2"
   },
   "devDependencies": {
