--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-PORT=3000
+PORT=3001
 HOST=0.0.0.0
-DB_HOST=
+DB_HOST=127.0.0.1
 DB_USER=
 DB_PASSWORD=
 DB_NAME=procon2022
 JWT_SECRET_KEY=
-QUESTION_SERVICE_API=http://localhost:5555
+SERVICE_API=http://localhost:5000
