--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ DB_USER=
 DB_PASSWORD=
 DB_NAME=procon_manager_db
 JWT_SECRET_KEY=
-SERVICE_API=http://127.0.0.1:5000
+SERVICE_API=http://127.0.0.1:8001/api
