--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bee-queue": "^1.7.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "got": "^11.8.5",
