--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ DB_PASSWORD=
 DB_NAME=procon_manager_db
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+REDIS_PASSWORD=
 JWT_SECRET_KEY=
 SERVICE_API=http://127.0.0.1:8001/api
