add service loadbalancing

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
 JWT_SECRET_KEY=
-SERVICE_API=http://127.0.0.1:8001/api
+SERVICE_APIS=["http://127.0.0.1:8001/api"]
