--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bee-queue": "^1.7.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "got": "^11.8.6",
